--- a/script.html
+++ b/script.html
@@ -1,6 +1,6 @@
 <script>
         // URL do Google Apps Script - ATUALIZE COM SUA URL
-        const SCRIPT_URL = 'https://script.google.com/a/macros/isgh.org.br/s/AKfycbzbGb6sQR1auYsyTB-kwPos7Cd7swLuTUDiAzzpwTPW2cj76ykYzKYgBDXA-g5ef7pbpw/exec';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzbGb6sQR1auYsyTB-kwPos7Cd7swLuTUDiAzzpwTPW2cj76ykYzKYgBDXA-g5ef7pbpw/exec';
         // Estado da aplicação
         function criarEstadoLiberacaoInicial() {
             return {
@@ -498,12 +498,11 @@
             if (elementos.headerUserProfile) {
                 elementos.headerUserProfile.setAttribute('aria-expanded', 'true');
             }
-            if (elementos.notificationBell) {
-                elementos.notificationBell.setAttribute('aria-expanded', 'true');
-            }
             sincronizarSelecaoAvatar();
             requestAnimationFrame(() => {
-                elementos.avatarModalClose?.focus();
+                const selecionado = elementos.avatarOptions?.querySelector('.avatar-option.selected');
+                const alvo = selecionado || elementos.avatarOptions?.querySelector('.avatar-option');
+                alvo?.focus();
             });
         }
         function fecharModalAvatar({ focusTrigger = true } = {}) {
@@ -522,9 +521,28 @@
                     elementos.headerUserProfile.focus();
                 }
             }
-            if (elementos.notificationBell) {
-                elementos.notificationBell.setAttribute('aria-expanded', 'false');
+            if (elementos.avatarUrlInput) {
+                elementos.avatarUrlInput.value = '';
+                elementos.avatarUrlInput.classList.remove('invalid');
+                elementos.avatarUrlInput.removeAttribute('aria-invalid');
             }
+        }
+        function painelNotificacoesAberto() {
+            return Boolean(elementos.notificationPanel?.classList.contains('is-open'));
+        }
+        function atualizarPainelNotificacoes(aberto) {
+            if (!elementos.notificationPanel) {
+                return;
+            }
+            const deveAbrir = Boolean(aberto);
+            elementos.notificationPanel.classList.toggle('is-open', deveAbrir);
+            elementos.notificationPanel.setAttribute('aria-hidden', deveAbrir ? 'false' : 'true');
+            if (elementos.notificationBell) {
+                elementos.notificationBell.setAttribute('aria-expanded', deveAbrir ? 'true' : 'false');
+            }
+        }
+        function alternarPainelNotificacoes() {
+            atualizarPainelNotificacoes(!painelNotificacoesAberto());
         }
         function aplicarAvatarUsuario(url) {
             if (!estado.autenticado || !estado.usuarioAutenticado) {
@@ -542,6 +560,30 @@
             sincronizarSelecaoAvatar();
             fecharModalAvatar();
         }
+        function aplicarAvatarPersonalizado() {
+            if (!elementos.avatarUrlInput) {
+                return;
+            }
+            const valor = elementos.avatarUrlInput.value.trim();
+            if (!valor) {
+                elementos.avatarUrlInput.classList.add('invalid');
+                elementos.avatarUrlInput.setAttribute('aria-invalid', 'true');
+                elementos.avatarUrlInput.focus();
+                return;
+            }
+            try {
+                const urlValida = new URL(valor);
+                elementos.avatarUrlInput.classList.remove('invalid');
+                elementos.avatarUrlInput.removeAttribute('aria-invalid');
+                const urlFinal = urlValida.toString();
+                elementos.avatarUrlInput.value = '';
+                aplicarAvatarUsuario(urlFinal);
+            } catch (erro) {
+                elementos.avatarUrlInput.classList.add('invalid');
+                elementos.avatarUrlInput.setAttribute('aria-invalid', 'true');
+                elementos.avatarUrlInput.focus();
+            }
+        }
         // Elementos DOM
         const elementos = {
             loginContainer: document.getElementById('login-container'),
@@ -556,6 +598,7 @@
             profileSelect: document.getElementById('profile-select'),
             unitSelect: document.getElementById('unit-select'),
             notificationBell: document.getElementById('notification-bell'),
+            notificationPanel: document.getElementById('notification-panel'),
             notificationBadge: document.querySelector('.notification-badge'),
             armariosContainer: document.getElementById('armarios-container'),
             armarioModal: document.getElementById('armario-modal'),
@@ -609,10 +652,9 @@
             avatarModal: document.getElementById('avatar-modal'),
             avatarModalBackdrop: document.getElementById('avatar-modal-backdrop'),
             avatarModalClose: document.getElementById('avatar-modal-close'),
-            profileModalAvatar: document.getElementById('profile-modal-avatar'),
-            profileModalName: document.getElementById('profile-modal-name'),
-            profileModalRole: document.getElementById('profile-modal-role'),
-            profileNotificationList: document.getElementById('profile-notification-list'),
+            avatarOptions: document.getElementById('avatar-options'),
+            avatarUrlInput: document.getElementById('avatar-url'),
+            avatarUrlApply: document.getElementById('avatar-url-apply'),
             globalLoadingOverlay: document.getElementById('global-loading-overlay'),
             globalLoadingText: document.getElementById('global-loading-text'),
             termoModal: document.getElementById('termo-modal'),
@@ -779,6 +821,7 @@
         }
         popularAvataresPadrao();
         sincronizarSelecaoAvatar();
+        atualizarPainelNotificacoes(false);
         const customSelectorInstances = new WeakMap();
         const customSelectorStore = new Set();
         const paginasRestritasUsuario = new Set(['cadastro-armarios', 'cadastro-unidades', 'usuarios', 'logs']);
@@ -787,7 +830,7 @@
         let eventosInicializados = false;
         const estadoImpressaoReserva = { dados: null };
         function garantirPortaisCabecalho() {
-            [elementos.avatarModalBackdrop].forEach(elemento => {
+            [elementos.notificationPanel, elementos.avatarModalBackdrop].forEach(elemento => {
                 if (elemento && elemento.parentElement !== document.body) {
                     document.body.appendChild(elemento);
                 }
@@ -1481,17 +1524,6 @@
                 elementos.headerUserAvatar.style.backgroundImage = '';
                 elementos.headerUserAvatar.classList.remove('has-image');
                 elementos.headerUserProfile?.setAttribute('aria-label', 'Perfil do usuário');
-                if (elementos.profileModalName) {
-                    elementos.profileModalName.textContent = 'Usuário';
-                }
-                if (elementos.profileModalRole) {
-                    elementos.profileModalRole.textContent = '';
-                }
-                if (elementos.profileModalAvatar) {
-                    elementos.profileModalAvatar.textContent = '--';
-                    elementos.profileModalAvatar.style.backgroundImage = '';
-                    elementos.profileModalAvatar.classList.remove('has-image');
-                }
                 if (elementos.headerUserGreetingRole) {
                     elementos.headerUserGreetingRole.textContent = 'Visitante';
                 }
@@ -1503,12 +1535,6 @@
             elementos.headerUserName.textContent = nomeLimpo;
             elementos.headerUserRole.textContent = perfilAtualEhAdmin() ? 'Administrador' : 'Usuário';
             elementos.headerUserProfile?.setAttribute('aria-label', `Perfil do usuário ${nomeLimpo} (${elementos.headerUserRole.textContent})`);
-            if (elementos.profileModalName) {
-                elementos.profileModalName.textContent = nomeLimpo;
-            }
-            if (elementos.profileModalRole) {
-                elementos.profileModalRole.textContent = elementos.headerUserRole.textContent;
-            }
             if (elementos.headerUserGreetingRole) {
                 elementos.headerUserGreetingRole.textContent = perfilAtualEhAdmin() ? 'Administrador Geral' : 'Usuário';
             }
@@ -1518,20 +1544,10 @@
                 elementos.headerUserAvatar.style.backgroundImage = `url("${avatarUrl.replace(/"/g, '\\"')}")`;
                 elementos.headerUserAvatar.classList.add('has-image');
                 elementos.headerUserAvatar.textContent = '';
-                if (elementos.profileModalAvatar) {
-                    elementos.profileModalAvatar.style.backgroundImage = `url("${avatarUrl.replace(/"/g, '\\"')}")`;
-                    elementos.profileModalAvatar.classList.add('has-image');
-                    elementos.profileModalAvatar.textContent = '';
-                }
             } else {
                 elementos.headerUserAvatar.style.backgroundImage = '';
                 elementos.headerUserAvatar.classList.remove('has-image');
                 elementos.headerUserAvatar.textContent = gerarIniciais(nomeLimpo);
-                if (elementos.profileModalAvatar) {
-                    elementos.profileModalAvatar.style.backgroundImage = '';
-                    elementos.profileModalAvatar.classList.remove('has-image');
-                    elementos.profileModalAvatar.textContent = gerarIniciais(nomeLimpo);
-                }
             }
             sincronizarSelecaoAvatar();
             atualizarResponsavelMovimentacaoInfo();
@@ -1805,26 +1821,8 @@
             return { success: false, error: 'Erro de conexão com o servidor', _erroNotificado: true };
         }
         async function inicializarAplicacao() {
-            try {
-                garantirPortaisCabecalho();
-                if (aplicacaoInicializada) {
-                    await carregarDadosIniciais();
-                    atualizarCabecalhoUsuario();
-                    if (!turnoIntervalId) {
-                        turnoIntervalId = setInterval(atualizarTurnoCabecalho, 60000);
-                    }
-                    aplicarPermissoesMenu();
-                    atualizarInterface();
-                    carregarDadosTabelas();
-                    persistirSessaoAtual();
-                    return;
-                }
-                aplicacaoInicializada = true;
-                aplicarPreferenciasCabecalhoRestauradas();
-                atualizarInterface();
-                aprimorarSeletoresCabecalho();
-                inicializarCanvasAssinatura();
-                inicializarEventos();
+            garantirPortaisCabecalho();
+            if (aplicacaoInicializada) {
                 await carregarDadosIniciais();
                 atualizarCabecalhoUsuario();
                 if (!turnoIntervalId) {
@@ -1834,14 +1832,23 @@
                 atualizarInterface();
                 carregarDadosTabelas();
                 persistirSessaoAtual();
-            } catch (erro) {
-                aplicacaoInicializada = false;
-                console.error('Erro ao inicializar a aplicação:', erro);
-                atualizarFeedbackLogin('error', 'Não foi possível iniciar a aplicação. Atualize a página.');
-                if (elementos.appShell) {
-                    elementos.appShell.classList.remove('hidden');
-                }
+                return;
             }
+            aplicacaoInicializada = true;
+            aplicarPreferenciasCabecalhoRestauradas();
+            atualizarInterface();
+            aprimorarSeletoresCabecalho();
+            inicializarCanvasAssinatura();
+            inicializarEventos();
+            await carregarDadosIniciais();
+            atualizarCabecalhoUsuario();
+            if (!turnoIntervalId) {
+                turnoIntervalId = setInterval(atualizarTurnoCabecalho, 60000);
+            }
+            aplicarPermissoesMenu();
+            atualizarInterface();
+            carregarDadosTabelas();
+            persistirSessaoAtual();
         }
         function atualizarFeedbackLogin(tipo, mensagem = '') {
             if (!elementos.loginFeedback) {
@@ -1944,6 +1951,9 @@
             }
             if (elementos.appShell) {
                 elementos.appShell.classList.add('hidden');
+            }
+            if (elementos.notificationPanel) {
+                atualizarPainelNotificacoes(false);
             }
             if (elementos.notificationBadge) {
                 elementos.notificationBadge.textContent = '0';
@@ -2815,16 +2825,12 @@
             // Notificações
             if (elementos.notificationBell) {
                 elementos.notificationBell.addEventListener('click', () => {
-                    if (avatarModalAberto()) {
-                        fecharModalAvatar({ focusTrigger: false });
-                    } else {
-                        abrirModalAvatar();
-                    }
+                    alternarPainelNotificacoes();
                 });
                 elementos.notificationBell.addEventListener('keydown', event => {
                     if (event.key === 'Enter' || event.key === ' ') {
                         event.preventDefault();
-                        abrirModalAvatar();
+                        alternarPainelNotificacoes();
                     }
                 });
             }
@@ -2852,6 +2858,42 @@
                     if (event.target === elementos.avatarModalBackdrop) {
                         fecharModalAvatar();
                     }
+                });
+            }
+            if (elementos.avatarOptions) {
+                elementos.avatarOptions.addEventListener('click', event => {
+                    const botao = event.target.closest('.avatar-option');
+                    if (!botao) {
+                        return;
+                    }
+                    event.preventDefault();
+                    aplicarAvatarUsuario(botao.dataset.avatarUrl || '');
+                });
+                elementos.avatarOptions.addEventListener('keydown', event => {
+                    if (event.key !== 'Enter' && event.key !== ' ') {
+                        return;
+                    }
+                    const botao = event.target.closest('.avatar-option');
+                    if (!botao) {
+                        return;
+                    }
+                    event.preventDefault();
+                    aplicarAvatarUsuario(botao.dataset.avatarUrl || '');
+                });
+            }
+            if (elementos.avatarUrlApply) {
+                elementos.avatarUrlApply.addEventListener('click', aplicarAvatarPersonalizado);
+            }
+            if (elementos.avatarUrlInput) {
+                elementos.avatarUrlInput.addEventListener('keydown', event => {
+                    if (event.key === 'Enter') {
+                        event.preventDefault();
+                        aplicarAvatarPersonalizado();
+                    }
+                });
+                elementos.avatarUrlInput.addEventListener('input', () => {
+                    elementos.avatarUrlInput.classList.remove('invalid');
+                    elementos.avatarUrlInput.removeAttribute('aria-invalid');
                 });
             }
             // Fechar modais
@@ -3344,10 +3386,24 @@
             if (elementos.usuarioUnidades) {
                 elementos.usuarioUnidades.addEventListener('change', tratarAlteracaoUnidadeUsuario);
             }
+            // Fechar notificações ao clicar fora
+            document.addEventListener('click', function(e) {
+                if (!painelNotificacoesAberto()) {
+                    return;
+                }
+                const cliqueForaDoPainel = elementos.notificationPanel && !elementos.notificationPanel.contains(e.target);
+                const cliqueForaDoSino = elementos.notificationBell && !elementos.notificationBell.contains(e.target);
+                if (cliqueForaDoPainel && cliqueForaDoSino) {
+                    atualizarPainelNotificacoes(false);
+                }
+            });
             document.addEventListener('keydown', event => {
                 if (event.key === 'Escape') {
                     if (avatarModalAberto()) {
                         fecharModalAvatar();
+                    }
+                    if (painelNotificacoesAberto()) {
+                        atualizarPainelNotificacoes(false);
                     }
                 }
             });
@@ -5286,9 +5342,10 @@
                 const nomeLimpo = (unidade.nome || '').trim();
                 const desativada = unidade.status !== 'ativa';
                 const label = desativada ? `${nomeLimpo} (inativa)` : nomeLimpo;
-                return `<option value="${nomeLimpo}" ${desativada ? 'disabled' : ''} data-icon="fas fa-location-dot">${label}</option>`;
+                const descricao = desativada ? 'Unidade temporariamente indisponível' : 'Filtrar por este setor';
+                return `<option value="${nomeLimpo}" ${desativada ? 'disabled' : ''} data-icon="fas fa-location-dot" data-description="${descricao}">${label}</option>`;
             }).join('');
-            const opcaoTodas = `<option value="todas" data-icon="fas fa-layer-group">Todas as unidades</option>`;
+            const opcaoTodas = `<option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>`;
             elementos.unitSelect.innerHTML = `${deveIncluirOpcaoTodas ? opcaoTodas : ''}${opcoes}`;
             const opcaoCorrespondente = Array.from(elementos.unitSelect.options)
                 .find(option => normalizarTexto(option.value) === valorAtualNormalizado);
@@ -9521,36 +9578,16 @@
             notificarProcessamentoEmSegundoPlano();
             executarLiberacaoAssincrona();
         }
-        function obterListaNotificacoesPerfil() {
-            if (elementos.profileNotificationList) {
-                return elementos.profileNotificationList;
-            }
-            const listaDireta = document.getElementById('profile-notification-list');
-            if (listaDireta) {
-                elementos.profileNotificationList = listaDireta;
-                return listaDireta;
-            }
-            const container = document.querySelector('.profile-modal-notifications');
-            if (!container) {
-                return null;
-            }
-            const listaExistente = container.querySelector('.notification-list');
-            const lista = listaExistente || document.createElement('div');
-            lista.className = 'notification-list';
-            lista.id = 'profile-notification-list';
-            if (!listaExistente) {
-                container.appendChild(lista);
-            }
-            elementos.profileNotificationList = lista;
-            return lista;
-        }
         // Atualizar painel de notificações
         function renderizarPainelNotificacoes() {
-            const notificationList = obterListaNotificacoesPerfil();
+            if (!elementos.notificationPanel) {
+                return;
+            }
+            const notificationList = elementos.notificationPanel.querySelector('.notification-list');
             if (!notificationList) {
                 return;
             }
-            elementos.profileNotificationList.innerHTML = '';
+            notificationList.innerHTML = '';
 
             estado.notificacoes.forEach(notificacao => {
                 const item = document.createElement('div');
@@ -9566,7 +9603,7 @@
                     </div>
                 `;
 
-                elementos.profileNotificationList.appendChild(item);
+                notificationList.appendChild(item);
             });
         }
        
